# MLOps-project-template

./: .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.tf  Dockerfile.tf-gpu  Makefile  README.md  _quarto-latexauto.yml  _quarto.yml  code-style.theme  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: azure.blob.env  exp_baseline.yaml
notebooks/: main.ipynb  main.tex  styles.css
notebooks/config/: _quarto.yml
report/: main.aux  main.fdb_latexmk  main.fls  main.tex
report/notebooks/: main.html  styles.css
report/notebooks/main_files 2/libs/bootstrap/: bootstrap-3f628f6ff291102e6a2f4b6c3c20333f.min.css
scripts/: convert_cards_to_md.py
src/yourproj/: config.py  device.py  models.py  train.py
src/yourproj/models/: sklearn_logreg.py
src/yourproj/utils/: __init__.py  utils.py
